# axum-restapi-advance

./: .env.example  Cargo.toml  Dockerfile  OBSERVABILITY.md  README.md  docker-compose.yml
observability/: otel-collector-config.yaml  prometheus.yml
observability/grafana/dashboards/: dashboards.yml
observability/grafana/datasources/: datasources.yml
src/: main.rs
src/features/vehicle/: handler.rs  model.rs  repo.rs
src/middlewares/: tracing.rs
src/routes/: health.rs  mod.rs  vehicle.rs
src/utils/: mod.rs  opentelemetry.rs  validator.rs
src/vehicle/: handler.rs  repo.rs
