[package]
name = "vehicle-manager-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros", "ws", "tracing"] }
chrono = { version = "0.4.38", features = ["serde"] }
opentelemetry = { version = "0.30.0", features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "metrics", "trace", "logs"] }
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "trace", "metrics", "logs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["trace", "request-id"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
uuid = { version = "1.18.0", features = ["v7", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
